[package]
name = "ransom"
version = "0.0.0"
edition = "2024"

[dependencies]

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
strip = true
panic = "abort"

[lints.clippy]
undocumented_unsafe_blocks = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -2 }
